<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TicketCheckoutAct"
    android:background="@color/bgPrimary">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_gradient_primary_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mregular"
                android:text="Buy Ticket"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_layout_white"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingTop="30dp"
                android:paddingRight="24dp"
                android:paddingBottom="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mregular"
            android:text="@string/ticket_details"
            android:textColor="@color/blackPrimary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/mlight"
            android:text="@string/check_the_amount_of_tickets"
            android:textColor="@color/grayPrimary"
            android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="#EDEDED" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:src="@drawable/ic_ticket_buy" />

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="6dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/nama_wisata"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mregular"
                            android:textColor="@color/blackPrimary"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/lokasi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/mlight"
                            android:textColor="@color/grayPrimary"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="11dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnmines"
                            android:layout_width="25dp"
                            android:layout_height="35dp"
                            android:background="@drawable/btnmines" />

                        <TextView
                            android:id="@+id/textjumlahtiket"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:fontFamily="@font/mregular"
                            android:text="1"
                            android:textColor="@color/blackPrimary"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/btnplus"
                            android:layout_width="25dp"
                            android:layout_height="28dp"
                            android:layout_marginTop="1dp"
                            android:background="@drawable/btnpls" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/ketentuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/mlight"
                    android:lineSpacingExtra="8dp"
                    android:textColor="@color/grayPrimary"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_layout_white"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingTop="30dp"
                android:paddingRight="24dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mregular"
            android:text="@string/pricing"
            android:textColor="@color/blackPrimary"
            android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/mlight"
                android:text="@string/your_current_balance_is"
                android:textColor="@color/grayPrimary"
                android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textmybalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/mmedium"
                        android:text="$0"
                        android:textColor="@color/bluePrimary"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="#EDEDED" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/mlight"
                android:text="@string/total_price"
                android:textColor="@color/grayPrimary"
                android:textSize="16sp" />

                    <TextView
                        android:id="@+id/texttotalharga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/mmedium"
                        android:text="$0"
                        android:textAlignment="center"
                        android:textColor="@color/greenPrimary"
                        android:textSize="32sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal"
                android:weightSum="4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/btn_back"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@drawable/bg_layout_white"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="28dp"
                            android:src="@drawable/ic_back" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_weight="3"
                    android:orientation="vertical">

            <Button
                android:id="@+id/btn_buy_ticket"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_btn_green_primary"
                android:fontFamily="@font/mmedium"
                android:text="@string/pay_now"
                android:textColor="#FFF"
                android:textSize="20sp"/>

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/notice_uang"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="38dp"
                android:src="@drawable/icon_tidak_cukup_uang"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayout4" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>